--- a/15-isalnds-thailand.html
+++ b/15-isalnds-thailand.html
@@ -16,10 +16,10 @@
         </ul>
     </div>
     <div class="center-page">
-        <img src="../../images/15-isalnds-thailand.jpg" width="200" height="120" alt="location-15-isalnds-thailand">
+        <img src="15-isalnds-thailand.jpg" width="200" height="120" alt="location-15-isalnds-thailand">
     </div>
     <nuv>
-        <h2><a href="../index.html">Go Back</a></h2>
+        <h2><a href="index.html">Go Back</a></h2>
     </nuv>
 </body>
 </html>
