--- a/atlantic-pasific-oceans.html
+++ b/atlantic-pasific-oceans.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Atlantic pasific oceans</title>
-    <link rel="stylesheet" href="./locations.css">
+    <link rel="stylesheet" href="locations.css">
 </head>
 <body>
     <h1>Atlantic pasific oceans</h1>
@@ -16,10 +16,10 @@
         </ul>
     </div>
     <div class="center-page">
-        <img src="../../images/atlantic-pasific-oceans.jpg" width="200" height="120" alt="location-atlantic-pasific-oceans">
+        <img src="atlantic-pasific-oceans.jpg" width="200" height="120" alt="location-atlantic-pasific-oceans">
     </div>
     <nuv>
-        <h2><a href="../index.html">Go Back</a></h2>
+        <h2><a href="index.html">Go Back</a></h2>
     </nuv>
 </body>
 </html>
