--- a/tokyo.html
+++ b/tokyo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tokyo</title>
-    <link rel="stylesheet" href="./locations.css">
+    <link rel="stylesheet" href="locations.css">
 </head>
 <body>
     <h1>Tokyo</h1>
@@ -16,10 +16,10 @@
         </ul>
     </div>
     <div class="center-page">
-        <img src="../../images/tokyo.jpg" width="200" height="120" alt="location-tokyo">
+        <img src="images/tokyo.jpg" width="200" height="120" alt="location-tokyo">
     </div>
     <nuv>
-        <h2><a href="../index.html">Go Back</a></h2>
+        <h2><a href="index.html">Go Back</a></h2>
     </nuv>
 </body>
 </html>
