--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Top Five Beautiful Locations</title>
-        <base href="../">
     </head>
     <body>
         <header>
@@ -21,7 +20,7 @@
             </ul>
         </nav>
         <div class="center-page">
-            <img src="15-isalnds-thailand.jpg" width="200" height="120" alt="Location Image 1" usemap="#location-15-isalnds-thailand">
+            <img src="./15-isalnds-thailand.jpg" width="200" height="120" alt="Location Image 1" usemap="#location-15-isalnds-thailand">
             <map name="location-15-isalnds-thailand">
                 <area shape="rect" coords="0,0,200,120" href="15-isalnds-thailand.html" alt="15 Islands">
             </map>
