--- a/niagra-falls.html
+++ b/niagra-falls.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div class="center-page">
-        <img src="images/niagra-falls.jpg" width="200" height="120" alt="location-niagra-falls">
+        <img src="niagra-falls.jpg" width="200" height="120" alt="location-niagra-falls">
     </div>
     <nuv>
         <h2><a href="index.html">Go Back</a></h2>
