--- a/time-square.html
+++ b/time-square.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div class="center-page">
-        <img src="images/time-square.jpg" width="200" height="120" alt="location-time-square">
+        <img src="time-square.jpg" width="200" height="120" alt="location-time-square">
     </div>
     <nuv>
         <h2><a href="index.html">Go Back</a></h2>
