--- a/tokyo.html
+++ b/tokyo.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div class="center-page">
-        <img src="images/tokyo.jpg" width="200" height="120" alt="location-tokyo">
+        <img src="tokyo.jpg" width="200" height="120" alt="location-tokyo">
     </div>
     <nuv>
         <h2><a href="index.html">Go Back</a></h2>
